# espn-fbb

./: .gitignore  README.md  pyproject.toml
docs/: ANALYTICS_METHOD.md  API_INTEGRATION.md  ARCHITECTURE.md  CACHE_AND_PERFORMANCE.md  CHANGELOG.md  COMMANDS.md  OUTPUT_SCHEMA.md  README.md  ROADMAP.md  TESTING.md
espn_fbb/: __init__.py  analytics.py  analytics_base.py  analytics_projection.py  analytics_schedule.py  cache.py  cli.py  config.py  fetch.py  schema.py  utils.py
tests/: test_analytics.py  test_cli.py  test_fetch.py
